hero-character: Uses FormArray so user can add inputs to a form as needed (e.g. A video game character has multiple items in their inventory, or a tenant has several pets)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-name-editor></app-name-editor>
-<br />
+<br>
 <app-profile-editor></app-profile-editor>
+<br>
+<app-hero-character></app-hero-character>
+
